MCP-176 Provide structured content for tool's results (#127)